--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5"
+        "php": "^7.0",
+        "psr/http-client": "^1.0"
     },
     "autoload": {
         "psr-4": {
